Fix selects' list color, fix overlaps' font size

--- a/static/css/baseStyle.css
+++ b/static/css/baseStyle.css
@@ -75,6 +75,10 @@ a:hover {
 	color: #00304f;
 }
 
+.option {
+    color: #00304f;
+}
+
 .select {
 	width: 100%;
 	line-height: 40px;
@@ -110,7 +114,7 @@ a:hover {
     border-radius: 6px;
     cursor: pointer;
     font-weight: 800;
-    font-size: 1.1vw;
+    font-size: 20px;
     text-transform: uppercase;
     overflow: hidden;
 	transition: .5s;
